--- a/.github/workflows/run-linuxdo.yml
+++ b/.github/workflows/run-linuxdo.yml
@@ -5,8 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 */6 * * *'  # 对应中国时间的每天凌晨3点
-
+    - cron: '5 10 * * 1-5'
 jobs:
   run-linuxdo:
     runs-on: ubuntu-latest
